@@ -1,3 +1,10 @@
+2008-03-27  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* metacity-window-manager.c: (metacity_change_settings),
+	(metacity_get_settings), (metacity_get_double_click_actions):
+	add "Maximize Vertically" and "Maximize Horizontally" to possible
+	double-click actions. Closes bug #329503.
+
 2007-08-12  Jens Granseuer  <jensgr@gmx.net>
 
 	* metacity-window-manager.c: (metacity_change_settings),
